# adeptus_testus

./: README.md  adeptus_substantial_runtime_profile_intake.md  adeptus_substantial_runtime_profile_launch_prompt.md  archive-boundary-integration-002.intake.md  archive-boundary-smoke-001.intake.md  facility-operations-expansion-002.codex-prompt.md  facility-operations-expansion-002.intake.md  facility-realism-visual-advanced-001.codex-prompt.md  facility-realism-visual-advanced-001.intake.md  human-review-checklist.md  pyproject.toml  review-gates-stress-001.intake.md  run-adeptus-archive-boundary-integration-002.prompt.md  run-adeptus-archive-boundary-smoke-001.prompt.md  run-adeptus-review-gates-stress-001.prompt.md
.adeptus/preflight/: target-root-check.txt
.adeptus/runs/facility-operations-expansion-002/state/: baseline-validation-summary.md  current-state.json  intake-summary.md  strategic-contract.json
.adeptus/runs/facility-operations-expansion-002/strategic/: strategic-plan.md
.adeptus/runs/facility-realism-visual-advanced-001/state/: current-state.json  final-validation-summary.md  intake-summary.md  strategic-contract.json
pathaudit/: __init__.py  __main__.py  audit.py  classifier.py  reporting.py
reviewflow/: __init__.py  context.py  domain.py  evaluator.py
src/adeptus_testus/: __init__.py  __main__.py  cli.py  facility.py
tests/: test_audit.py  test_classifier.py  test_cli.py  test_context_containment.py  test_domain_vocabulary.py  test_facility.py  test_failure_dossier_decisions.py  test_gate_advancement_rules.py
(+95 files in other folders)
