[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adeptus-testus"
version = "0.1.0"
description = "Deterministic headless simulation of Sarah in Adeptus Testus Facility."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
adeptus-testus = "adeptus_testus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
