[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pathaudit"
version = "0.1.0"
description = "Classify manifest paths for product, runtime artifact, cache, or invalid status."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
